assets/css/common.css
/* ... */
.toc-link {
    list-style-type: none;
    display: block;
    color: var(--text-sub);
    font-size: .9em;
    padding: .2em 0;
    transition: .3s;
}

.toc-title {
    padding-left: .5em;
    text-transform: uppercase;
    padding-bottom: 1.3em;
    font-size: 1.2em;
    color: var(--text-sub);
}

.toc-link:hover {
    text-decoration: none;
    color: var(--text-sub2);
    margin-left: .2em;
}

.h-active {
    border-radius: .3em;
    background-color: var(--background-text);
}

.toc-h1 {
    padding-left: 1em;
    font-weight: bold;
}

.toc-h2 {
    padding-left: 1.5em;
}

.toc-h3 {
    padding-left: 2.3em;
    font-size: .9em;
}

#article-content img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-height: 50vh;
    box-shadow: var(--shadow) 0 1px 2px 1px;
}

.nav-collapse ul {
    margin: 0;
    padding: 0;
    width: 100%;
    display: block;
    list-style: none;
}

.nav-collapse li {
    width: 100%;
    display: block;
}

.js .nav-collapse {
    clip: rect(0 0 0 0);
    max-height: 0;
    position: absolute;
    display: block;
    overflow: hidden;
    zoom: 1;
}

.nav-collapse.opened {
    max-height: 9999px;
}

.nav-toggle {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.gt-container .gt-comments-null {
    display: none !important;
}

/* for mobile devices that responsive nav is enabled */
@media screen and (max-width: 39.99999999em) {
    .main-title {
        padding: 1em 1em .5em;
    }

    .hidden-on-mobile {
        display: none !important;
    }

    .central_col {
        width: 100vw;
        padding: 1em;
    }

    .dynamic-inline-block {
        display: block;
    }

    .main-title, .article-title {
        font-size: 28px;
    }

    h1 {
        font-size: 32px;
    }

    h2 {
        font-size: 24px;
    }

    footer {
        padding: 0 1em;
    }
}

#nav > ul {
    width: 100%;
    display: flex;
    justify-content: center;
}

#nav li:first-child {
    flex: 1;
}

#nav a,
#nav a:before{
    font-weight: bolder;
    line-height: 100%;
}

#nav li {
    display:inline-block;
    width:auto;
    margin: .5em 1em;
}

/* for desktop devices on which responsive nav is disabled*/
@media screen and (min-width: 40em) {
    .show-on-mobile {
        display: none !important;
    }

    .js .nav-collapse {
        position: relative;
    }
    .js .nav-collapse.closed {
        max-height: none;
    }
    .nav-toggle {
        display: none!important;
    }
}

/* for tablet users*/
@media screen and (min-width: 40em) and (max-width: 79.999999999em) {
    .central_col {
        width: calc(100vw - 18em);
        flex: none;
        padding: 1.5em 0 0 1em;
    }

    #sidebar {
        width: 16em;
        margin-right: 1em;
        left: calc(100vw - 18em + 1em);
        height: 100%;
        position: absolute;
        right: 0;
        top: 0;
    }

    .sidebar-inner {
        position: sticky;
        top: 0;
        padding-top: 2.5em;
    }

    .article-title {
        font-size: 26px;
    }

    .article-subtitle {
        font-size: 20px;
    }

    .main-title {
        padding-left: .5em;
    }

    .sidebar-inner {
        width: 100%;
        padding-top: 1.5em;
    }

    .central_col {border-bottom: none}
    .main {border-bottom: var(--sep) solid 1px;}
}

/* for wide screen devices*/
@media screen and (min-width: 80em) {
    .central_col {
        width: 50%;
        margin: 1.5em auto 0;
    }

    .main-title {
        padding-left: calc(25vw + 5px)
    }

    #sidebar {
        position: absolute;
        left: calc(75vw + 2em);
        top: 0;
        height: 100%;
        width: 16em;
        --width: 16em;
    }

    .sidebar-inner {
        position: sticky;
        top: 0;
        padding-top: 1.5em;
    }
}

/* .highlight .hll { background-color: #ffffcc } */
.highlight,pre.highlight{background:#282c34;color:#abb2bf}.highlight pre{background:#282c34}.highlight .hll{background:#282c34}.highlight .c{color:#5c6370;font-style:italic}.highlight .err{color:#960050;background-color:#1e0010}.highlight .k{color:#c678dd}.highlight .l{color:#98c379}.highlight .n{color:#abb2bf}.highlight .o{color:#abb2bf}.highlight .p{color:#abb2bf}.highlight .cm{color:#5c6370;font-style:italic}.highlight .cp{color:#5c6370;font-style:italic}.highlight .c1{color:#5c6370;font-style:italic}.highlight .cs{color:#5c6370;font-style:italic}.highlight .ge{font-style:italic}.highlight .gs{font-weight:700}.highlight .kc{color:#c678dd}.highlight .kd{color:#c678dd}.highlight .kn{color:#c678dd}.highlight .kp{color:#c678dd}.highlight .kr{color:#c678dd}.highlight .kt{color:#c678dd}.highlight .ld{color:#98c379}.highlight .m{color:#d19a66}.highlight .s{color:#98c379}.highlight .na{color:#d19a66}.highlight .nb{color:#e5c07b}.highlight .nc{color:#e5c07b}.highlight .no{color:#e5c07b}.highlight .nd{color:#e5c07b}.highlight .ni{color:#e5c07b}.highlight .ne{color:#e5c07b}.highlight .nf{color:#abb2bf}.highlight .nl{color:#e5c07b}.highlight .nn{color:#abb2bf}.highlight .nx{color:#abb2bf}.highlight .py{color:#e5c07b}.highlight .nt{color:#e06c75}.highlight .nv{color:#e5c07b}.highlight .ow{font-weight:700}.highlight .w{color:#f8f8f2}.highlight .mf{color:#d19a66}.highlight .mh{color:#d19a66}.highlight .mi{color:#d19a66}.highlight .mo{color:#d19a66}.highlight .sb{color:#98c379}.highlight .sc{color:#98c379}.highlight .sd{color:#98c379}.highlight .s2{color:#98c379}.highlight .se{color:#98c379}.highlight .sh{color:#98c379}.highlight .si{color:#98c379}.highlight .sx{color:#98c379}.highlight .sr{color:#56b6c2}.highlight .s1{color:#98c379}.highlight .ss{color:#56b6c2}.highlight .bp{color:#e5c07b}.highlight .vc{color:#e5c07b}.highlight .vg{color:#e5c07b}.highlight .vi{color:#e06c75}.highlight .il{color:#d19a66}.highlight .gu{color:#75715e}.highlight .gd{color:#f92672}.highlight .gi{color:#a6e22e}
/* ... */

